# dosbox-serial

./: README
autom4te.cache/: output.0  requests  traces.0
src/hardware/serialport/: Makefile  Makefile.am  Makefile.in  libserial.cpp  serialport.cpp
src/hardware/serialport/.deps/: custbaud.Po  directserial.Po  libserial.Po  misc_util.Po  nullmodem.Po  serialdummy.Po  serialport.Po  softmodem.Po  termios2.Po
